RESOLVED FIXED310325
REGRESSION(309217@main): [iOS] ASSERTION FAILED: m_ptr in editing/input/cocoa/extended-proofreading.html
https://bugs.webkit.org/show_bug.cgi?id=310325
Summary REGRESSION(309217@main): [iOS] ASSERTION FAILED: m_ptr in editing/input/cocoa...
Megan Gardner
Reported 2026-03-19 20:57:04 PDT
REGRESSION(309217@main): [iOS] ASSERTION FAILED: m_ptr in editing/input/cocoa/extended-proofreading.html
Attachments
Megan Gardner
Comment 1 2026-03-19 20:57:05 PDT
Megan Gardner
Comment 2 2026-03-19 21:05:14 PDT
EWS
Comment 3 2026-03-20 00:49:25 PDT
Committed 309602@main (2236b2a0c44b): <https://commits.webkit.org/309602@main> Reviewed commits have been landed. Closing PR #60978 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.